--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website Title</title>
+    <title>KING'S EYES ONLY</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Your Website Title</h1>
+        <h1>Pictures Do Not Look Good on Resumes</h1>
     </header>
 
     <section class="intro">
-        <p>This is an introductory paragraph about you or your work. You can add a brief description of your projects or anything you want to highlight.</p>
+        <p>Sorry, I do those things out of habit because watching my poor, OCD dad's eye twitch makes me smile.</p>
         <div class="image-container">
             <img src="image1.jpg" alt="Image 1">
             <img src="image2.jpg" alt="Image 2">
         </div>
-        <p>Additional text can go here. You can expand on your introduction, talk about your mission, or explain what visitors can expect from your site.</p>
+        <p>Because since I was born my eye hasn't stopped... I am not perfect and that gpa is a complete fabrication so I hope you see this before validating that. I have never really tried on anything because I have never had anything in front of me that I thought was worth it, but I promise that if you or someone you know gives me an opportunity I will do anything in my power to not dissapoint Haley. I only want enough money to satisfy her, not a penny more.</p>
     </section>
 
     <section class="projects">
-        <h2>My Projects</h2>
+        <h2>Here's some of the shit I've done in my free time:</h2>
         <div class="project-grid">
             <a href="project1.html" class="project-box">
                 <img src="project1-preview.jpg" alt="Project 1">
