--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     </header>
 
     <section class="intro">
-        <p>Sorry, I do those things out of habit because watching my poor, OCD dad's eye twitch makes me smile.</p>
+            <p>Sorry, I do those things out of habit because antagonising my poor fathers OCD makes mine hurt less.</p>
         <div class="image-container">
             <img src="image1.jpg" alt="Image 1">
             <img src="image2.jpg" alt="Image 2">
         </div>
-        <p>Because since I was born my eye hasn't stopped... I am not perfect and that gpa is a complete fabrication so I hope you see this before validating that. I have never really tried on anything because I have never had anything in front of me that I thought was worth it, but I promise that if you or someone you know gives me an opportunity I will do anything in my power to not dissapoint Haley. I only want enough money to satisfy her, not a penny more.</p>
+        <p>I obviously do not have the GPA you or anyone in your position would find attractive but I'll die before I dissapoint Haley, and I'd rather make my living in a legitamite way instead of the ways I had planned.</p>
     </section>
 
     <section class="projects">
