--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KING'S EYES ONLY</title>
+    <title>ORBION IS DOPE AF</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,16 +12,12 @@
     </header>
 
     <section class="intro">
-            <p>Sorry, I do those things out of habit because antagonising my poor fathers OCD makes mine hurt less.</p>
-        <div class="image-container">
-            <img src="image1.jpg" alt="Image 1">
-            <img src="image2.jpg" alt="Image 2">
-        </div>
-        <p>I obviously do not have the GPA you or anyone in your position would find attractive but I'll die before I dissapoint Haley, and I'd rather make my living in a legitamite way instead of the ways I had planned.</p>
+            <p>Here's some of the shit I've done in my free time:</p>
+       
     </section>
 
     <section class="projects">
-        <h2>Here's some of the shit I've done in my free time:</h2>
+        <h2></h2>
         <div class="project-grid">
             <a href="project1.html" class="project-box">
                 <img src="project1-preview.jpg" alt="Project 1">
