--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ORBION IS DOPE AF</title>
+    <title>The Knights Who Say "Ni"!</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
     </header>
 
     <section class="intro">
-            <p>Here's some of the $h!t I've done in my free time: (sorry I antogonized your OCD with poorly organized dishes in the dishwasher, I do stuff like that to my poor dad all the time but with him its intentional)</p>
+            <p>Firstly, Thank you for your time and considerating. </p>
     </section>
 
     <section class="projects">
