--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header>
-        <h1>Pictures Do Not Look Good on Resumes</h1>
+        <h1>Thank you for your time and consideration</h1>
     </header>
 
     <section class="intro">
-            <p>Firstly, Thank you for your time and considerating. </p>
+            <p>The photos below are some of my favorite projects and some of the technical documents used in the construction of a Scanning Tunneling Microscope for atomic resolution micrsocopy.</p>
     </section>
 
     <section class="projects">
