--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
+        <p>&copy; 2024 Nate Needs a Job.</p>
     </footer>
 </body>
 </html>
