--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="projects">
         <!-- Project 1 -->
         <div class="project">
-            <img src="image1.jpg" alt="Project 1 Image">
+            <img src="https://github.com/Nathan-Shoults/resume/blob/main/IMG_1842.JPG" alt="Project 1 Image">
             <p>Project 1: Brief description of the project. Highlight key aspects, achievements, or technologies used.</p>
         </div>
 
