--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <section class="projects">
         <!-- Project 1 -->
         <div class="project">
-            <img src="https://github.com/Nathan-Shoults/resume/blob/main/IMG_1842.JPG" alt="Project 1 Image">
-            <p>Project 1: Brief description of the project. Highlight key aspects, achievements, or technologies used.</p>
+            <img src="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/IMG_1842.JPG" alt="Project 1 Image">
+            <p>This is my dad and I doing an engine swap on my 1998 Suzuki Samurai.</p>
         </div>
 
         <!-- Project 2 -->
