--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="projects">
         <!-- Project 1 -->
         <div class="project">
-            <img src="https:https://raw.githubusercontent.com/Nathan-Shoults/resume/main/IMG_1842.JPG" alt="Project 1 Image">
+            <img src="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/IMG_1842.JPG" alt="Project 1 Image">
             <p>This is my dad and I doing an engine swap on my 1998 Suzuki Samurai.</p>
         </div>
 
