--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <!-- Project 2 -->
         <div class="project">
-            <img src="image2.jpg" alt="Project 2 Image">
+            <img src="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/arcade.JPG" alt="Project 2 Image">
             <p>Project 2: Brief description of the project. Highlight key aspects, achievements, or technologies used.</p>
         </div>
 
