--- a/index.html
+++ b/index.html
@@ -3,6 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Welcome to My Portfolio</h1>
+    </header>
+
+    <section class="intro">
+        <p>This portfolio showcases some of my best projects. Below, you'll find images and summaries of my work. Click on the images to learn more about each project.</p>
+    </section>
+
+    <section class="projects-grid">
+        <!-- Project 1 -->
+        <div class="project">
+            <img src="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/IMG_1842.JPG" alt="Project 1 Image">
+            <p>This is my dad and I doing an engine swap on our 1998 Suzuki Samuari (I also blew the differential and had to replace the rear axle).</p>
+        </div>
+
+        <!-- Project 2 -->
+        <div class="project">
+            <img src="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/arcade.JPG" alt="Project 2 Image">
+            <p>This is an Arcade cabinet that I built summer 2022 for my college apartment. It now lives with an elementary teacher and dear friend Sean Hutch.</p>
+        </div>
+
+        <!-- Project 3 -->
+        <div class="project">
+            <img src="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/smartlock.JPG" alt="Project 3 Image">
+            <p>Project 3: Brief description of the project.</p>
+        </div>
+
+        <!-- Project 4 -->
+        <div class="project">
+            <img src="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/IMG_1842.JPG" alt="Project 4 Image">
+            <p>Project 4: Brief description of the project.</p>
+        </div>
+    </section>
+
+    <section class="resume">
+        <h2>Preview and Download My Resume</h2>
+        <p>Below, you can preview my resume. If you'd like to download it, use the link provided:</p>
+        <div class="pdf-preview">
+            <embed src="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/resume.pdf" type="application/pdf" width="100%" height="600px" />
+        </div>
+        <a href="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/resume.pdf" download="My_Resume.pdf" class="resume-button">Download Resume</a>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Your Name. All rights reserved.</p>
+    </footer>
+</body>
+</html>
+
+
+
+
+
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nate's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
