--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <!-- Project 3 -->
         <div class="project">
-            <img src="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/smartlock.JPG" alt="Project 3 Image">
+            <img src="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/smartlock.jpg" alt="Project 3 Image">
             <p>Project 3: Brief description of the project.</p>
         </div>
 
@@ -48,74 +48,6 @@
             <embed src="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/resume.pdf" type="application/pdf" width="100%" height="600px" />
         </div>
         <a href="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/resume.pdf" download="My_Resume.pdf" class="resume-button">Download Resume</a>
-    </section>
-
-    <footer>
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
-    </footer>
-</body>
-</html>
-
-
-
-
-
-
-
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nate's Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <h1>Thank You For Your Time and Consideration!</h1>
-    </header>
-
-    <section class="intro">
-        <p>This portfolio showcases some of my best projects. Below, you'll find images and summaries of my work. Click on the images to learn more about each project.</p>
-    </section>
-
-    <section class="projects">
-        <!-- Project 1 -->
-        <div class="project">
-            <img src="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/IMG_1842.JPG" alt="Project 1 Image">
-            <p>This is my dad and I doing an engine swap on my 1998 Suzuki Samurai.</p>
-        </div>
-
-        <!-- Project 2 -->
-        <div class="project">
-            <img src="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/arcade.JPG" alt="Project 2 Image">
-            <p>Project 2: Brief description of the project. Highlight key aspects, achievements, or technologies used.</p>
-        </div>
-
-        <!-- Project 3 -->
-        <div class="project">
-            <img src="image3.jpg" alt="Project 3 Image">
-            <p>Project 3: Brief description of the project. Highlight key aspects, achievements, or technologies used.</p>
-        </div>
-
-        <!-- Project 4 -->
-        <div class="project">
-            <img src="image4.jpg" alt="Project 4 Image">
-            <p>Project 4: Brief description of the project. Highlight key aspects, achievements, or technologies used.</p>
-        </div>
-
-        <!-- Project 5 -->
-        <div class="project">
-            <img src="image5.jpg" alt="Project 5 Image">
-            <p>Project 5: Brief description of the project. Highlight key aspects, achievements, or technologies used.</p>
-        </div>
-    </section>
-
-    <section class="resume">
-        <h2>Download My Resume</h2>
-        <p>If you'd like to learn more about my professional background, you can download my resume below:</p>
-        <a href="resume.pdf" download="My_Resume.pdf" class="resume-button">Download Resume</a>
     </section>
 
     <footer>
