--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <!-- Project 2 -->
         <div class="project">
-            <img src="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/arcade.JPG" alt="Project 2 Image">
+            <img src="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/arcade.jpg" alt="Project 2 Image">
             <p>This is an Arcade cabinet that I built summer 2022 for my college apartment. It now lives with an elementary teacher and dear friend Sean Hutch.</p>
         </div>
 
