--- a/index.html
+++ b/index.html
@@ -16,12 +16,7 @@
     </section>
 
     <section class="projects-grid">
-        <!-- Project 1 -->
-        <div class="project">
-            <img src="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/IMG_1842.JPG" alt="Project 1 Image">
-            <p>This is my dad and I doing an engine swap on our 1998 Suzuki Samuari (I also blew the differential and had to replace the rear axle).</p>
-        </div>
-
+        
         <!-- Project 2 -->
         <div class="project">
             <img src="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/arcade.jpg" alt="Project 2 Image">
@@ -31,7 +26,13 @@
         <!-- Project 3 -->
         <div class="project">
             <img src="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/smartlock.jpg" alt="Project 3 Image">
-            <p>Project 3: Brief description of the project.</p>
+            <p>This is a smart lock that I designed and built that used an ESP32 Dev board and a MG995 Servo to detect my phone and unlock my front door.</p>
+        </div>
+
+        <!-- Project 1 -->
+        <div class="project">
+            <img src="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/IMG_1842.JPG" alt="Project 1 Image">
+            <p>This is my dad and I doing an engine swap on our 1998 Suzuki Samuari (I also blew the differential and had to replace the rear axle).</p>
         </div>
 
         <!-- Project 4 -->
