--- a/index.html
+++ b/index.html
@@ -37,9 +37,15 @@
 
         <!-- Project 4 -->
         <div class="project">
-            <img src="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/IMG_1842.JPG" alt="Project 4 Image">
-            <p>Project 4: Brief description of the project.</p>
+            <img src="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/IMG_5542.JPG" alt="Project 4 Image">
+            <p>This is the dissasembled two stroke engine that I bought for like $10 from the scrap yard because it's piston was fused to the cylinder. I bought a new piston and rebuilt it, the thing goes 80 now.</p>
         </div>
+
+        <div class="project">
+            <img src="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/IMG_8949.JPG" alt="Project 4 Image">
+            <p>This is a "hands-free" flamethrower and my first project that utilized my 3D printer for the wrist mounts that held the buttons for the solenoids. I have since parted it all out sadly.</p>
+        </div>
+        
     </section>
 
     <section class="resume">
