--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
 
         <div class="project">
-            <img src="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/IMG_8949.JPG" alt="Project 4 Image">
+            <img src="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/IMG_8949.jpg" alt="Project 4 Image">
             <p>This is a "hands-free" flamethrower and my first project that utilized my 3D printer for the wrist mounts that held the buttons for the solenoids. I have since parted it all out sadly.</p>
         </div>
         
