--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header>
-        <h1>Welcome! Thank you for your time and consideration!</h1>
+        <h1>Resume is at The bottom, Thank you for your time and consideration!</h1>
     </header>
 
     <section class="intro">
-        <p>This portfolio showcases some of my best projects. Below, you'll find images and summaries of my work. Click on the images to learn more about each project.</p>
+        <p>This portfolio showcases some of my best projects. Below, you'll find images and summaries of my work. I hope you find them as cool as I did.</p>
     </section>
 
     <section class="projects-grid">
