--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
         <h2>Preview and Download My Resume</h2>
             <p>Below, you can preview my resume. If you'd like to download it, use the link provided:</p>
         <div class="pdf-preview">
-            <embed src="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/Resume%202024_page-0001.jpg" type="application/pdf" width="100%" height="600px" />
+            <img src="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/Resume%202024_page-0001.jpg" type="application/pdf" width="100%" height="600px" />
         </div>
-        <a href="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/Resume%202024_page-0001.jpg" download="My_Resume.pdf" class="resume-button">Download Resume</a>
+        <a href="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/Resume2024.pdf" download="My_Resume.pdf" class="resume-button">Download Resume</a>
     </section>
 
 
