--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- Project 2 -->
         <div class="project">
             <img src="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/STM.jpg" alt="Project 2 Image">
-            <p>This is part of one of the thousands of technical documents the team I led (three graduate ME's and two EE's) that designed built and implemented .</p>
+            <p>I led a team of three graduate Mechanical Engineers and two Electrical Engineers in the design, fabrication, and implementation of a Scanning Tunneling Microscope for atomic microscopy for quantum dot research for the School of Informatics, Computing and Cyber security at NAU and this is just one of the thousands of documents used in the developmental phase.</p>
         </div>
         
         <!-- Project 2 -->
