--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 
     <section class="resume">
         <div class="pdf-preview">
-            <img src="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/Resume%202024_page-0001.jpg" type="application/pdf" width="80%" height="1200px" />
+            <img src="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/Resume%202024_page-0001.jpg" alt="Resume Preview" />
         </div>
         <a href="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/Resume2024.pdf" download="My_Resume.pdf" class="resume-button">Download Resume</a>
     </section>
+
     
     <section class="projects-grid">
 
