--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <section class="resume">
         <div class="pdf-preview">
-            <img src="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/Resume%202024_page-0001.jpg" alt="Resume Preview" />
+            <img src="https://raw.githubusercontent.com/Nathan-Shoults/portfolio/main/Resume2024.jpg" alt="Resume Preview" />
         </div>
         <a href="https://raw.githubusercontent.com/Nathan-Shoults/resume/main/Resume2024.pdf" download="My_Resume.pdf" class="resume-button">Download Resume</a>
     </section>
