--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Thank you for your time and consideration!</h1>
+        <h1>THANK YOU FOR YOUR TIME AND CONSIDERATION.</h1>
     </header>
     
     <section class="resume">
