--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <!-- Project 1 -->
         <div class="project">
             <img src="https://raw.githubusercontent.com/Nathan-Shoults/portfolio/main/IMG_1842.JPG" alt="Project 1 Image">
-            <p>This is my dad and I performing a less than delicate engine swap on our 1998 Suzuki Samuari (I also tore the differential a new one).</p>
+            <p>This is my dad and I performing a less than delicate engine swap on our 1998 Suzuki Samuari.</p>
         </div>
 
         <!-- Project 4 -->
